fix: performance issues in ESM and EQS